			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04d: *********************************

IMP: (2/1/06, SMR) Removed text window methods from UserInterface.

IMP: (2/1/06, SMR) Technologies with no node groups (from the technology editor)
     have them created automatically in Technology.getNodesGrouped().

BUG: (2/1/06, SMR) Transistors are not placed correctly (Bug #802).
FIX: In EditWindow.showDraggedBox(), adjust preview box.

BUG: (2/1/06, SMR) Regressions fail because of extra technology information.
FIX: In Pref.getMeaningVariables(), ignore invalid options.

IMP: (1/31/06, GVG) Move MessagesStream.messagesStream out of TopLevel (all regression scripts checked).
More fixes in regressions.
 
IMP: (1/31/06, SMR) Added NodeInst.isCellInstance() to distinguish cells from primitives
     without using "instanceof".

BUG: (1/30/06, DN) Regression tests hang.
FIX: In ServerJobManager.DatabaseChangesThread.run do System.exit on empty job queue in batch mode. 

BUG: (1/30/06, SMR) When global text is scaled, small text is still not displayed.
FIX: In VectorDrawing.drawList(), account for global scale when clipping text.

IMP: (1/30/06, SMR) Added Pref methods "delayPrefFlushing()" and "resumePrefFlushing()"
     to speed up bulk preference changes.  Used in WaveformWindow.preserveSignalOrder(),
     Layer.preserveVisibility(), Pref.importPrefs(), Pref.finishPrefReconcilation(). 

BUG: (1/30/06, SMR) Saved error logs do not read back in.
FIX: Adjusted parsing to match new output.

IMP: (1/28/06, GVG) Incremental Schematic working now

IMP: (1/27/06, GVG) Update StatusBar on click on EditWindow (Bug#799).

IMP: (1/27/06, GVG) More improvements in MinArea algorithms.

BUG: (1/27/06, SMR) Inherited attributes are placed badly (Bug #788).
FIX: In CircuitChangeJobs.updateInheritedVar(), place from the icon position.

BUG: (1/27/06, SMR) Printing looks bad (Bug #785).