@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04d: *********************************
 
+BUG: (2/1/06, SMR) HSpice insists on having a ".tr0" file (Bug #805).
+FIX: In HSpiceOut.java, use more general method of finding file names.
+
 IMP: (2/1/06, SMR) Removed text window methods from UserInterface.
 
 IMP: (2/1/06, SMR) Technologies with no node groups (from the technology editor)
